--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,6 +14,13 @@ services:
     volumes:
       - postgres-data:/var/lib/postgresql/data
 
+    healthcheck:
+      test: [ "CMD-SHELL", "pg_isready -U fastify_user -d fastify_db" ]
+      interval: 10s
+      timeout: 5s
+      retries: 5
+      start_period: 5s
+
   api:
     build:
       context: .
@@ -27,10 +34,10 @@ services:
       db:
         condition: service_healthy
     ports:
-      - "3000:3000"
+      - "3001:3001"
     volumes:
       - ./:/usr/src/app
-      - /uploads:/app/uploads
+      - ./uploads:/usr/src/app/uploads
     working_dir: /usr/src/app
     command: npm run start
 
